--- a/app/templates/configure/scenarios.html
+++ b/app/templates/configure/scenarios.html
@@ -2,7 +2,7 @@
 
 {% block upper_left %}
     <div class="nav-container">
-        <a href="{{ url_for('configure') }}">Back to Setup</a>
+        <a href="{{ url_for('configure_index') }}">Back to Setup</a>
     </div>
 {% endblock %}
 
