--- a/app/templates/play/event.html
+++ b/app/templates/play/event.html
@@ -4,7 +4,7 @@
     <div class="nav-container">
         <a class="upper-left" href="{{ url_for('overview') }}">[O]verview</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for('configure') }}">General Setup</a>
+        <a class="upper-left" href="{{ url_for('configure_index') }}">General Setup</a>
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure_event', event_id=current.id) }}">Event Setup</a>
     </div>
