--- a/app/templates/session/session_link.html
+++ b/app/templates/session/session_link.html
@@ -4,7 +4,7 @@
     <div class="nav-container">
         <a class="upper-left" href="{{ url_for('overview') }}">Continue Game</a>
         <span class="separator">|</span>
-        <a href="{{ url_for('configure') }}">Change Setup</a>
+        <a href="{{ url_for('configure_index') }}">Change Setup</a>
     </div>
 {% endblock %}
 
