--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -2,7 +2,7 @@
 
 {% block upper_left %}
     <div class="nav-container">
-        <a href="{{ url_for('configure') }}">General Setup</a>
+        <a href="{{ url_for('configure_index') }}">General Setup</a>
     </div>
 {% endblock %}
 
